src/parser.output
Nonterminals useless in grammar

   INITIALISE_DECLARATOR_LIST
   STRUCT_OR_UNION_SPE
   STRUCT_OR_UNION
   STRUCT_DECLARATION_LIST
   STRUCT_DECLARATION
   SPE_QUALIFIER_LIST
   STRUCT_DECLARATOR_LIST
   STRUCT_DECLARATOR
   POINTER
   TYPE_QUALIFIER_LIST
   TYPE_NAME
   ABS_DECLARATOR
   DIRECT_ABS_DECLARATOR


Terminals unused in grammar

   T_STRUCT
   T_UNION


Rules useless in grammar

  165 INITIALISE_DECLARATOR_LIST: INITIALISE_DECLARATOR
  166                           | INITIALISE_DECLARATOR_LIST T_COMMA INITIALISE_DECLARATOR

  167 STRUCT_OR_UNION_SPE: STRUCT_OR_UNION T_VARIABLE T_LCURLY STRUCT_DECLARATION_LIST T_RCURLY
  168                    | STRUCT_OR_UNION T_LCURLY STRUCT_DECLARATION_LIST T_RCURLY
  169                    | STRUCT_OR_UNION T_VARIABLE

  170 STRUCT_OR_UNION: T_STRUCT
  171                | T_UNION

  172 STRUCT_DECLARATION_LIST: STRUCT_DECLARATION
  173                        | STRUCT_DECLARATION_LIST STRUCT_DECLARATION

  174 STRUCT_DECLARATION: SPE_QUALIFIER_LIST STRUCT_DECLARATOR_LIST T_SEMICOLON

  175 SPE_QUALIFIER_LIST: TYPE_SPE SPE_QUALIFIER_LIST
  176                   | TYPE_SPE
  177                   | TYPE_QUALIFIER SPE_QUALIFIER_LIST
  178                   | TYPE_QUALIFIER

  179 STRUCT_DECLARATOR_LIST: STRUCT_DECLARATOR
  180                       | STRUCT_DECLARATOR_LIST T_COMMA STRUCT_DECLARATOR

  181 STRUCT_DECLARATOR: DECLARATOR
  182                  | T_COLON CONST_EXPR
  183                  | DECLARATOR T_COLON CONST_EXPR

  184 POINTER: T_MULTIPLY
  185        | T_MULTIPLY TYPE_QUALIFIER_LIST
  186        | T_MULTIPLY POINTER
  187        | T_MULTIPLY TYPE_QUALIFIER_LIST POINTER

  188 TYPE_QUALIFIER_LIST: TYPE_QUALIFIER
  189                    | TYPE_QUALIFIER_LIST TYPE_QUALIFIER

  190 TYPE_NAME: SPE_QUALIFIER_LIST
  191          | SPE_QUALIFIER_LIST ABS_DECLARATOR

  192 ABS_DECLARATOR: POINTER
  193               | DIRECT_ABS_DECLARATOR
  194               | POINTER DIRECT_ABS_DECLARATOR

  195 DIRECT_ABS_DECLARATOR: T_RBRACKET ABS_DECLARATOR T_LBRACKET
  196                      | L_SQRBRACKET R_SQRBRACKET
  197                      | L_SQRBRACKET CONST_EXPR R_SQRBRACKET
  198                      | DIRECT_ABS_DECLARATOR L_SQRBRACKET R_SQRBRACKET
  199                      | DIRECT_ABS_DECLARATOR L_SQRBRACKET CONST_EXPR R_SQRBRACKET
  200                      | T_LBRACKET T_RBRACKET
  201                      | T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  202                      | DIRECT_ABS_DECLARATOR T_LBRACKET T_RBRACKET
  203                      | DIRECT_ABS_DECLARATOR T_LBRACKET PARAM_TYPE_LIST T_LBRACKET


State 81 conflicts: 1 shift/reduce
State 119 conflicts: 2 shift/reduce
State 142 conflicts: 2 shift/reduce
State 143 conflicts: 2 shift/reduce
State 146 conflicts: 2 shift/reduce
State 213 conflicts: 1 shift/reduce
State 267 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 PRIM_EXPR: T_VARIABLE
    2          | T_NUM
    3          | T_CHARVAL
    4          | T_LBRACKET EXPR T_RBRACKET

    5 POSTFIX_EXPR: PRIM_EXPR
    6             | POSTFIX_EXPR L_SQRBRACKET EXPR R_SQRBRACKET
    7             | POSTFIX_EXPR T_LBRACKET T_RBRACKET
    8             | POSTFIX_EXPR T_LBRACKET ARG_EXPR_LIST T_RBRACKET
    9             | POSTFIX_EXPR T_PERIOD T_VARIABLE
   10             | UNARY_EXPR INC_OP
   11             | UNARY_EXPR DEC_OP

   12 ARG_EXPR_LIST: ASSIGN_EXPR
   13              | ASSIGN_EXPR T_COMMA ARG_EXPR_LIST

   14 UNARY_EXPR: POSTFIX_EXPR
   15           | UNARY_OP CAST_EXPR
   16           | INC_OP UNARY_EXPR
   17           | DEC_OP UNARY_EXPR
   18           | T_SIZEOF UNARY_EXPR
   19           | T_SIZEOF T_LBRACKET PRIM_EXPR T_RBRACKET
   20           | T_SIZEOF T_LBRACKET TYPE_SPE T_RBRACKET

   21 UNARY_OP: T_AND
   22         | T_MULTIPLY
   23         | T_ADD
   24         | T_SUB
   25         | T_INVERT
   26         | T_NOT

   27 CAST_EXPR: UNARY_EXPR

   28 MULT_EXPR: CAST_EXPR
   29          | MULT_EXPR T_MULTIPLY CAST_EXPR
   30          | MULT_EXPR T_DIV CAST_EXPR
   31          | MULT_EXPR T_MODULO CAST_EXPR

   32 ADD_EXPR: MULT_EXPR
   33         | ADD_EXPR T_ADD MULT_EXPR
   34         | ADD_EXPR T_SUB MULT_EXPR

   35 SHIFT_EXPR: ADD_EXPR
   36           | SHIFT_EXPR T_SHIFTLEFT ADD_EXPR
   37           | SHIFT_EXPR T_SHIFTRIGHT ADD_EXPR

   38 COMPARISON_EXPR: SHIFT_EXPR
   39                | COMPARISON_EXPR T_LESSTHAN SHIFT_EXPR
   40                | COMPARISON_EXPR T_GREATERTHAN SHIFT_EXPR
   41                | COMPARISON_EXPR T_LESSTHANEQUAL SHIFT_EXPR
   42                | COMPARISON_EXPR T_GREATERTHANEQUAL SHIFT_EXPR

   43 EQUAL_EXPR: COMPARISON_EXPR
   44           | EQUAL_EXPR T_EQUAL COMPARISON_EXPR
   45           | EQUAL_EXPR T_NOTEQUAL COMPARISON_EXPR

   46 AND_EXPR: EQUAL_EXPR
   47         | AND_EXPR T_AND EQUAL_EXPR

   48 XOR_EXPR: AND_EXPR
   49         | XOR_EXPR T_XOR AND_EXPR

   50 INCLUSIVE_OR_EXPR: XOR_EXPR
   51                  | INCLUSIVE_OR_EXPR T_OR AND_EXPR

   52 LOGIC_AND_EXPR: INCLUSIVE_OR_EXPR
   53               | LOGIC_AND_EXPR T_AND_OP INCLUSIVE_OR_EXPR

   54 LOGIC_OR_EXPR: LOGIC_AND_EXPR
   55              | LOGIC_OR_EXPR T_OR_OP LOGIC_AND_EXPR

   56 CONDITION_EXPR: LOGIC_OR_EXPR
   57               | LOGIC_OR_EXPR T_QUESTION EXPR T_COLON CONDITION_EXPR

   58 ASSIGN_OP: T_ASSIGN
   59          | T_ADDEQUAL
   60          | T_DIVIDEEQUAL
   61          | T_MODEQUAL
   62          | T_SUBEQUAL
   63          | T_MULTEQUAL
   64          | T_LEFTEQUAL
   65          | T_RIGHTEQUAL
   66          | T_ANDEQUAL
   67          | T_XOREQUAL
   68          | T_OREQUAL

   69 ASSIGN_EXPR: CONDITION_EXPR
   70            | UNARY_EXPR ASSIGN_OP ASSIGN_EXPR

   71 EXPR: ASSIGN_EXPR
   72     | EXPR T_COMMA ASSIGN_EXPR

   73 CONST_EXPR: CONDITION_EXPR

   74 DECLARATION: DECLARATION_SPE T_SEMICOLON
   75            | DECLARATION_SPE INITIALISE_DECLARATOR T_SEMICOLON

   76 DECLARATION_SPE: STORAGE_CLASS_SPE
   77                | STORAGE_CLASS_SPE DECLARATION_SPE
   78                | TYPE_SPE
   79                | TYPE_SPE DECLARATION_SPE
   80                | TYPE_QUALIFIER
   81                | TYPE_QUALIFIER DECLARATION_SPE

   82 INITIALISE_DECLARATOR: DECLARATOR
   83                      | DECLARATOR T_ASSIGN VARIABLE_STORE

   84 STORAGE_CLASS_SPE: T_TYPEDEF
   85                  | T_EXTERN
   86                  | T_STATIC

   87 TYPE_SPE: T_VOID
   88         | T_CHAR
   89         | T_FLOAT
   90         | T_INT
   91         | T_UNSIGNED
   92         | T_DOUBLE
   93         | ENUM_SPECIFIER

   94 ENUM_SPECIFIER: T_ENUM T_LCURLY ENUM_LIST T_RCURLY
   95               | T_ENUM T_VARIABLE T_LCURLY ENUM_LIST T_RCURLY
   96               | T_ENUM T_VARIABLE

   97 ENUM_LIST: ENUMERATOR
   98          | ENUM_LIST T_COMMA ENUMERATOR

   99 ENUMERATOR: T_VARIABLE
  100           | T_VARIABLE T_ASSIGN CONST_EXPR

  101 TYPE_QUALIFIER: T_CONST
  102               | T_VOLATILE

  103 DECLARATOR: DIRECT_DECL

  104 DIRECT_DECL: T_VARIABLE
  105            | T_LBRACKET DECLARATOR T_RBRACKET
  106            | DIRECT_DECL L_SQRBRACKET CONST_EXPR R_SQRBRACKET
  107            | DIRECT_DECL L_SQRBRACKET R_SQRBRACKET
  108            | DIRECT_DECL T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  109            | DIRECT_DECL T_LBRACKET T_VARIABLE_LIST T_RBRACKET
  110            | DIRECT_DECL T_LBRACKET T_RBRACKET

  111 PARAM_TYPE_LIST: PARAM_LIST
  112                | PARAM_LIST T_COMMA T_ELLIPSIS

  113 PARAM_LIST: PARAM_DECLARATION
  114           | PARAM_LIST T_COMMA PARAM_DECLARATION

  115 PARAM_DECLARATION: DECLARATION_SPE DECLARATOR
  116                  | DECLARATION_SPE

  117 T_VARIABLE_LIST: T_VARIABLE
  118                | T_VARIABLE_LIST T_COMMA T_VARIABLE

  119 VARIABLE_STORE: ASSIGN_EXPR
  120               | T_LCURLY VARIABLE_STORE_LIST T_RCURLY
  121               | T_LCURLY VARIABLE_STORE_LIST T_COMMA T_RCURLY

  122 VARIABLE_STORE_LIST: VARIABLE_STORE
  123                    | VARIABLE_STORE_LIST T_COMMA VARIABLE_STORE

  124 STATEMENT: LABELED_STATEMENT
  125          | COMPOUND_STATEMENT
  126          | EXPR_STATEMENT
  127          | SELECT_STATEMENT
  128          | ITERATION_STATEMENT
  129          | JUMP_STATEMENT

  130 LABELED_STATEMENT: T_VARIABLE T_COLON STATEMENT
  131                  | T_CASE CONST_EXPR T_COLON STATEMENT
  132                  | T_DEFAULT T_COLON STATEMENT

  133 COMPOUND_STATEMENT: T_LCURLY T_RCURLY
  134                   | T_LCURLY STATEMENT_LIST T_RCURLY
  135                   | T_LCURLY DECLARATION_LIST T_RCURLY
  136                   | T_LCURLY DECLARATION_LIST STATEMENT_LIST T_RCURLY

  137 DECLARATION_LIST: DECLARATION
  138                 | DECLARATION_LIST DECLARATION

  139 STATEMENT_LIST: STATEMENT
  140               | STATEMENT_LIST STATEMENT

  141 EXPR_STATEMENT: T_SEMICOLON
  142               | EXPR T_SEMICOLON

  143 SELECT_STATEMENT: T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT
  144                 | T_IF T_LBRACKET EXPR T_RBRACKET STATEMENT T_ELSE STATEMENT
  145                 | T_SWITCH T_LBRACKET EXPR T_RBRACKET STATEMENT

  146 ITERATION_STATEMENT: T_WHILE T_LBRACKET EXPR T_RBRACKET STATEMENT
  147                    | T_DO STATEMENT T_WHILE T_RBRACKET EXPR T_LBRACKET T_SEMICOLON
  148                    | T_FOR T_LBRACKET EXPR_STATEMENT EXPR_STATEMENT T_RBRACKET STATEMENT
  149                    | T_FOR T_LBRACKET EXPR_STATEMENT EXPR_STATEMENT EXPR T_RBRACKET STATEMENT
  150                    | T_FOR T_LBRACKET DECLARATION EXPR_STATEMENT EXPR T_RBRACKET STATEMENT

  151 JUMP_STATEMENT: GOTO T_VARIABLE T_SEMICOLON
  152               | T_CONTINUE T_SEMICOLON
  153               | T_BREAK T_SEMICOLON
  154               | T_RETURN T_SEMICOLON
  155               | T_RETURN EXPR T_SEMICOLON

  156 TRANSLATION_UNIT: EXTERN_DECL
  157                 | TRANSLATION_UNIT EXTERN_DECL

  158 EXTERN_DECL: FUNCT_DEF
  159            | DECLARATION

  160 FUNCT_DEF: DECLARATION_SPE DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  161          | DECLARATION_SPE DECLARATOR COMPOUND_STATEMENT
  162          | DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  163          | DECLARATOR COMPOUND_STATEMENT

  164 ROOT: TRANSLATION_UNIT


Terminals, with rules where they appear

$end (0) 0
error (256)
T_WHILE (258) 146 147
T_FOR (259) 148 149 150
T_IF (260) 143 144
T_ELSE (261) 144
T_INT (262) 90
T_VOID (263) 87
T_ENUM (264) 94 95 96
T_RETURN (265) 154 155
T_BREAK (266) 153
T_CONTINUE (267) 152
T_SWITCH (268) 145
T_CASE (269) 131
T_DEFAULT (270) 132
GOTO (271) 151
T_DO (272) 147
T_ADDEQUAL (273) 59
T_DIVIDEEQUAL (274) 60
T_MODEQUAL (275) 61
T_SUBEQUAL (276) 62
T_MULTEQUAL (277) 63
T_LEFTEQUAL (278) 64
T_RIGHTEQUAL (279) 65
T_ANDEQUAL (280) 66
T_XOREQUAL (281) 67
T_OREQUAL (282) 68
T_SHIFTRIGHT (283) 37
T_SHIFTLEFT (284) 36
T_LESSTHAN (285) 39
T_GREATERTHAN (286) 40
T_GREATERTHANEQUAL (287) 42
T_LESSTHANEQUAL (288) 41
T_STRUCT (289)
T_UNION (290)
T_OR (291) 51
T_AND (292) 21 47
T_NOT (293) 26
T_MODULO (294) 31
T_EQUAL (295) 44
T_ASSIGN (296) 58 83 100
T_NOTEQUAL (297) 45
T_INVERT (298) 25
T_AND_OP (299) 53
T_OR_OP (300) 55
T_CONST (301) 101
T_VOLATILE (302) 102
T_MULTIPLY (303) 22 29
T_DIV (304) 30
T_ADD (305) 23 33
T_SUB (306) 24 34
T_XOR (307) 49
INC_OP (308) 10 16
DEC_OP (309) 11 17
T_EXTERN (310) 85
T_TYPEDEF (311) 84
T_STATIC (312) 86
T_ELLIPSIS (313) 112
T_LBRACKET (314) 4 7 8 19 20 105 108 109 110 143 144 145 146 147 148
    149 150
T_RBRACKET (315) 4 7 8 19 20 105 108 109 110 143 144 145 146 147 148
    149 150
L_SQRBRACKET (316) 6 106 107
R_SQRBRACKET (317) 6 106 107
T_LCURLY (318) 94 95 120 121 133 134 135 136
T_RCURLY (319) 94 95 120 121 133 134 135 136
T_SEMICOLON (320) 74 75 141 142 147 151 152 153 154 155
T_COMMA (321) 13 72 98 112 114 118 121 123
T_COLON (322) 57 130 131 132
T_QUESTION (323) 57
T_PERIOD (324) 9
T_UNSIGNED (325) 91
T_CHAR (326) 88
T_SIZEOF (327) 18 19 20
T_FLOAT (328) 89
T_DOUBLE (329) 92
T_NUM (330) 2
T_VARIABLE (331) 1 9 95 96 99 100 104 117 118 130 151
T_CHARVAL (332) 3


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
PRIM_EXPR (79)
    on left: 1 2 3 4, on right: 5 19
POSTFIX_EXPR (80)
    on left: 5 6 7 8 9 10 11, on right: 6 7 8 9 14
ARG_EXPR_LIST (81)
    on left: 12 13, on right: 8 13
UNARY_EXPR (82)
    on left: 14 15 16 17 18 19 20, on right: 10 11 16 17 18 27 70
UNARY_OP (83)
    on left: 21 22 23 24 25 26, on right: 15
CAST_EXPR (84)
    on left: 27, on right: 15 28 29 30 31
MULT_EXPR (85)
    on left: 28 29 30 31, on right: 29 30 31 32 33 34
ADD_EXPR (86)
    on left: 32 33 34, on right: 33 34 35 36 37
SHIFT_EXPR (87)
    on left: 35 36 37, on right: 36 37 38 39 40 41 42
COMPARISON_EXPR (88)
    on left: 38 39 40 41 42, on right: 39 40 41 42 43 44 45
EQUAL_EXPR (89)
    on left: 43 44 45, on right: 44 45 46 47
AND_EXPR (90)
    on left: 46 47, on right: 47 48 49 51
XOR_EXPR (91)
    on left: 48 49, on right: 49 50
INCLUSIVE_OR_EXPR (92)
    on left: 50 51, on right: 51 52 53
LOGIC_AND_EXPR (93)
    on left: 52 53, on right: 53 54 55
LOGIC_OR_EXPR (94)
    on left: 54 55, on right: 55 56 57
CONDITION_EXPR (95)
    on left: 56 57, on right: 57 69 73
ASSIGN_OP (96)
    on left: 58 59 60 61 62 63 64 65 66 67 68, on right: 70
ASSIGN_EXPR (97)
    on left: 69 70, on right: 12 13 70 71 72 119
EXPR (98)
    on left: 71 72, on right: 4 6 57 72 142 143 144 145 146 147 149
    150 155
CONST_EXPR (99)
    on left: 73, on right: 100 106 131
DECLARATION (100)
    on left: 74 75, on right: 137 138 150 159
DECLARATION_SPE (101)
    on left: 76 77 78 79 80 81, on right: 74 75 77 79 81 115 116 160
    161
INITIALISE_DECLARATOR (102)
    on left: 82 83, on right: 75
STORAGE_CLASS_SPE (103)
    on left: 84 85 86, on right: 76 77
TYPE_SPE (104)
    on left: 87 88 89 90 91 92 93, on right: 20 78 79
ENUM_SPECIFIER (105)
    on left: 94 95 96, on right: 93
ENUM_LIST (106)
    on left: 97 98, on right: 94 95 98
ENUMERATOR (107)
    on left: 99 100, on right: 97 98
TYPE_QUALIFIER (108)
    on left: 101 102, on right: 80 81
DECLARATOR (109)
    on left: 103, on right: 82 83 105 115 160 161 162 163
DIRECT_DECL (110)
    on left: 104 105 106 107 108 109 110, on right: 103 106 107 108
    109 110
PARAM_TYPE_LIST (111)
    on left: 111 112, on right: 108
PARAM_LIST (112)
    on left: 113 114, on right: 111 112 114
PARAM_DECLARATION (113)
    on left: 115 116, on right: 113 114
T_VARIABLE_LIST (114)
    on left: 117 118, on right: 109 118
VARIABLE_STORE (115)
    on left: 119 120 121, on right: 83 122 123
VARIABLE_STORE_LIST (116)
    on left: 122 123, on right: 120 121 123
STATEMENT (117)
    on left: 124 125 126 127 128 129, on right: 130 131 132 139 140
    143 144 145 146 147 148 149 150
LABELED_STATEMENT (118)
    on left: 130 131 132, on right: 124
COMPOUND_STATEMENT (119)
    on left: 133 134 135 136, on right: 125 160 161 162 163
DECLARATION_LIST (120)
    on left: 137 138, on right: 135 136 138 160 162
STATEMENT_LIST (121)
    on left: 139 140, on right: 134 136 140
EXPR_STATEMENT (122)
    on left: 141 142, on right: 126 148 149 150
SELECT_STATEMENT (123)
    on left: 143 144 145, on right: 127
ITERATION_STATEMENT (124)
    on left: 146 147 148 149 150, on right: 128
JUMP_STATEMENT (125)
    on left: 151 152 153 154 155, on right: 129
TRANSLATION_UNIT (126)
    on left: 156 157, on right: 157 164
EXTERN_DECL (127)
    on left: 158 159, on right: 156 157
FUNCT_DEF (128)
    on left: 160 161 162 163, on right: 158
ROOT (129)
    on left: 164, on right: 0


State 0

    0 $accept: . ROOT $end

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_LBRACKET  shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13
    T_VARIABLE  shift, and go to state 14

    DECLARATION        go to state 15
    DECLARATION_SPE    go to state 16
    STORAGE_CLASS_SPE  go to state 17
    TYPE_SPE           go to state 18
    ENUM_SPECIFIER     go to state 19
    TYPE_QUALIFIER     go to state 20
    DECLARATOR         go to state 21
    DIRECT_DECL        go to state 22
    TRANSLATION_UNIT   go to state 23
    EXTERN_DECL        go to state 24
    FUNCT_DEF          go to state 25
    ROOT               go to state 26


State 1

   90 TYPE_SPE: T_INT .

    $default  reduce using rule 90 (TYPE_SPE)


State 2

   87 TYPE_SPE: T_VOID .

    $default  reduce using rule 87 (TYPE_SPE)


State 3

   94 ENUM_SPECIFIER: T_ENUM . T_LCURLY ENUM_LIST T_RCURLY
   95               | T_ENUM . T_VARIABLE T_LCURLY ENUM_LIST T_RCURLY
   96               | T_ENUM . T_VARIABLE

    T_LCURLY    shift, and go to state 27
    T_VARIABLE  shift, and go to state 28


State 4

  101 TYPE_QUALIFIER: T_CONST .

    $default  reduce using rule 101 (TYPE_QUALIFIER)


State 5

  102 TYPE_QUALIFIER: T_VOLATILE .

    $default  reduce using rule 102 (TYPE_QUALIFIER)


State 6

   85 STORAGE_CLASS_SPE: T_EXTERN .

    $default  reduce using rule 85 (STORAGE_CLASS_SPE)


State 7

   84 STORAGE_CLASS_SPE: T_TYPEDEF .

    $default  reduce using rule 84 (STORAGE_CLASS_SPE)


State 8

   86 STORAGE_CLASS_SPE: T_STATIC .

    $default  reduce using rule 86 (STORAGE_CLASS_SPE)


State 9

  105 DIRECT_DECL: T_LBRACKET . DECLARATOR T_RBRACKET

    T_LBRACKET  shift, and go to state 9
    T_VARIABLE  shift, and go to state 14

    DECLARATOR   go to state 29
    DIRECT_DECL  go to state 22


State 10

   91 TYPE_SPE: T_UNSIGNED .

    $default  reduce using rule 91 (TYPE_SPE)


State 11

   88 TYPE_SPE: T_CHAR .

    $default  reduce using rule 88 (TYPE_SPE)


State 12

   89 TYPE_SPE: T_FLOAT .

    $default  reduce using rule 89 (TYPE_SPE)


State 13

   92 TYPE_SPE: T_DOUBLE .

    $default  reduce using rule 92 (TYPE_SPE)


State 14

  104 DIRECT_DECL: T_VARIABLE .

    $default  reduce using rule 104 (DIRECT_DECL)


State 15

  159 EXTERN_DECL: DECLARATION .

    $default  reduce using rule 159 (EXTERN_DECL)


State 16

   74 DECLARATION: DECLARATION_SPE . T_SEMICOLON
   75            | DECLARATION_SPE . INITIALISE_DECLARATOR T_SEMICOLON
  160 FUNCT_DEF: DECLARATION_SPE . DECLARATOR DECLARATION_LIST COMPOUND_STATEMENT
  161          | DECLARATION_SPE . DECLARATOR COMPOUND_STATEMENT

    T_LBRACKET   shift, and go to state 9
    T_SEMICOLON  shift, and go to state 30
    T_VARIABLE   shift, and go to state 14

    INITIALISE_DECLARATOR  go to state 31
    DECLARATOR             go to state 32
    DIRECT_DECL            go to state 22


State 17

   76 DECLARATION_SPE: STORAGE_CLASS_SPE .
   77                | STORAGE_CLASS_SPE . DECLARATION_SPE

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13

    $default  reduce using rule 76 (DECLARATION_SPE)

    DECLARATION_SPE    go to state 33
    STORAGE_CLASS_SPE  go to state 17
    TYPE_SPE           go to state 18
    ENUM_SPECIFIER     go to state 19
    TYPE_QUALIFIER     go to state 20


State 18

   78 DECLARATION_SPE: TYPE_SPE .
   79                | TYPE_SPE . DECLARATION_SPE

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13

    $default  reduce using rule 78 (DECLARATION_SPE)

    DECLARATION_SPE    go to state 34
    STORAGE_CLASS_SPE  go to state 17
    TYPE_SPE           go to state 18
    ENUM_SPECIFIER     go to state 19
    TYPE_QUALIFIER     go to state 20


State 19

   93 TYPE_SPE: ENUM_SPECIFIER .

    $default  reduce using rule 93 (TYPE_SPE)


State 20

   80 DECLARATION_SPE: TYPE_QUALIFIER .
   81                | TYPE_QUALIFIER . DECLARATION_SPE

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13

    $default  reduce using rule 80 (DECLARATION_SPE)

    DECLARATION_SPE    go to state 35
    STORAGE_CLASS_SPE  go to state 17
    TYPE_SPE           go to state 18
    ENUM_SPECIFIER     go to state 19
    TYPE_QUALIFIER     go to state 20


State 21

  162 FUNCT_DEF: DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  163          | DECLARATOR . COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_LCURLY    shift, and go to state 36
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13

    DECLARATION         go to state 37
    DECLARATION_SPE     go to state 38
    STORAGE_CLASS_SPE   go to state 17
    TYPE_SPE            go to state 18
    ENUM_SPECIFIER      go to state 19
    TYPE_QUALIFIER      go to state 20
    COMPOUND_STATEMENT  go to state 39
    DECLARATION_LIST    go to state 40


State 22

  103 DECLARATOR: DIRECT_DECL .
  106 DIRECT_DECL: DIRECT_DECL . L_SQRBRACKET CONST_EXPR R_SQRBRACKET
  107            | DIRECT_DECL . L_SQRBRACKET R_SQRBRACKET
  108            | DIRECT_DECL . T_LBRACKET PARAM_TYPE_LIST T_RBRACKET
  109            | DIRECT_DECL . T_LBRACKET T_VARIABLE_LIST T_RBRACKET
  110            | DIRECT_DECL . T_LBRACKET T_RBRACKET

    T_LBRACKET    shift, and go to state 41
    L_SQRBRACKET  shift, and go to state 42

    $default  reduce using rule 103 (DECLARATOR)


State 23

  157 TRANSLATION_UNIT: TRANSLATION_UNIT . EXTERN_DECL
  164 ROOT: TRANSLATION_UNIT .

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_LBRACKET  shift, and go to state 9
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13
    T_VARIABLE  shift, and go to state 14

    $default  reduce using rule 164 (ROOT)

    DECLARATION        go to state 15
    DECLARATION_SPE    go to state 16
    STORAGE_CLASS_SPE  go to state 17
    TYPE_SPE           go to state 18
    ENUM_SPECIFIER     go to state 19
    TYPE_QUALIFIER     go to state 20
    DECLARATOR         go to state 21
    DIRECT_DECL        go to state 22
    EXTERN_DECL        go to state 43
    FUNCT_DEF          go to state 25


State 24

  156 TRANSLATION_UNIT: EXTERN_DECL .

    $default  reduce using rule 156 (TRANSLATION_UNIT)


State 25

  158 EXTERN_DECL: FUNCT_DEF .

    $default  reduce using rule 158 (EXTERN_DECL)


State 26

    0 $accept: ROOT . $end

    $end  shift, and go to state 44


State 27

   94 ENUM_SPECIFIER: T_ENUM T_LCURLY . ENUM_LIST T_RCURLY

    T_VARIABLE  shift, and go to state 45

    ENUM_LIST   go to state 46
    ENUMERATOR  go to state 47


State 28

   95 ENUM_SPECIFIER: T_ENUM T_VARIABLE . T_LCURLY ENUM_LIST T_RCURLY
   96               | T_ENUM T_VARIABLE .

    T_LCURLY  shift, and go to state 48

    $default  reduce using rule 96 (ENUM_SPECIFIER)


State 29

  105 DIRECT_DECL: T_LBRACKET DECLARATOR . T_RBRACKET

    T_RBRACKET  shift, and go to state 49


State 30

   74 DECLARATION: DECLARATION_SPE T_SEMICOLON .

    $default  reduce using rule 74 (DECLARATION)


State 31

   75 DECLARATION: DECLARATION_SPE INITIALISE_DECLARATOR . T_SEMICOLON

    T_SEMICOLON  shift, and go to state 50


State 32

   82 INITIALISE_DECLARATOR: DECLARATOR .
   83                      | DECLARATOR . T_ASSIGN VARIABLE_STORE
  160 FUNCT_DEF: DECLARATION_SPE DECLARATOR . DECLARATION_LIST COMPOUND_STATEMENT
  161          | DECLARATION_SPE DECLARATOR . COMPOUND_STATEMENT

    T_INT       shift, and go to state 1
    T_VOID      shift, and go to state 2
    T_ENUM      shift, and go to state 3
    T_ASSIGN    shift, and go to state 51
    T_CONST     shift, and go to state 4
    T_VOLATILE  shift, and go to state 5
    T_EXTERN    shift, and go to state 6
    T_TYPEDEF   shift, and go to state 7
    T_STATIC    shift, and go to state 8
    T_LCURLY    shift, and go to state 36
    T_UNSIGNED  shift, and go to state 10
    T_CHAR      shift, and go to state 11
    T_FLOAT     shift, and go to state 12
    T_DOUBLE    shift, and go to state 13

    $default  reduce using rule 82 (INITIALISE_DECLARATOR)

    DECLARATION         go to state 37
    DECLARATION_SPE     go to state 38
    STORAGE_CLASS_SPE   go to state 17
    TYPE_SPE            go to state 18
    ENUM_SPECIFIER      go to state 19
    TYPE_QUALIFIER      go to state 20
    COMPOUND_STATEMENT  go to state 52
    DECLARATION_LIST    go to state 53


State 33

   77 DECLARATION_SPE: STORAGE_CLASS_SPE DECLARATION_SPE .

    $default  reduce using rule 77 (DECLARATION_SPE)


State 34

   79 DECLARATION_SPE: TYPE_SPE DECLARATION_SPE .

    $default  reduce using rule 79 (DECLARATION_SPE)


State 35

   81 DECLARATION_SPE: TYPE_QUALIFIER DECLARATION_SPE .

    $default  reduce using rule 81 (DECLARATION_SPE)


State 36

  133 COMPOUND_STATEMENT: T_LCURLY . T_RCURLY
  134                   | T_LCURLY . STATEMENT_LIST T_RCURLY
  135                   | T_LCURLY . DECLARATION_LIST T_RCURLY
  136                   | T_LCURLY . DECLARATION_LIST STATEMENT_LIST T_RCURLY
